kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuberbank-backend-service
  namespace: kuberbank
  labels:
    app: kuberbank-backend
    component: api
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app: kuberbank-backend
